the landing page should be appearing correctly on mobile devices

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,7 +10,7 @@ body {
 .page-background {
   background: url('../images/li-background-test5.jpg') no-repeat;
   background-position: 50% 50%;
-  background-size: cover;
+  /* background-size: cover; */
   box-shadow: 0 0 100px 20px black inset;
   height: 100vh;
   position: absolute;
@@ -122,6 +122,7 @@ body {
 
   .page-background {
     background: url('../images/li-background-test5-mobile.jpg') no-repeat;
+    height: 800px;
   }
 
   .training-infographic {
